fix alignment on safari and mqtt reading

--- a/src/web_ui/static/css/data_reading.css
+++ b/src/web_ui/static/css/data_reading.css
@@ -15,7 +15,7 @@ td {
 }
 
 th {
-    text-align: center;
+    text-align: left !important;
 }
 
 table {
@@ -37,10 +37,16 @@ td {
     height: 10px;
 }
 
+.row:before,
+.row:after {
+    width: 0px;
+    height: 0px;
+}
+
 .clickable {
     cursor: pointer;
 }
 
-.accordion-toggle[aria-expanded="true"] .chev-down {
+.btn-nav-accordion[aria-expanded="true"] .fa-chevron-down {
     transform: rotate(180deg);
-  }
+}
